--- a/ticktock/client/overview/portfolio.less
+++ b/ticktock/client/overview/portfolio.less
@@ -1,6 +1,7 @@
 #overview .portfolio {
   
   background-color: #333;
+  overflow: scroll;
 
   .tiles {
     color: #999;
